fix color contrast warnings

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,5 +1,5 @@
 $border-color: rgba(0, 0, 0, .14);
 $text-color: rgba(0, 0, 0, .54);
 $primary-color: #247BA0;
-$secondary-color: #70C1B3;
+$secondary-color: #008577;
 $tertiary-color: #B2DBBF; //#F3FFBD
